--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,73 +1,102 @@
-aiomysql==0.3.2
-aioredis==2.0.1
-aiosqlite==0.21.0
+aiomysql==0.2.0
+aiosqlite==0.19.0
+alabaster==1.0.0
 annotated-types==0.7.0
 anyio==4.10.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==25.1.0
-async-timeout==5.0.1
+babel==2.17.0
 backoff==2.2.1
-bcrypt==4.3.0
-blinker==1.9.0
+bcrypt==5.0.0
+beautifulsoup4==4.13.4
 certifi==2025.8.3
 cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.2.1
-cryptography==46.0.1
+charset-normalizer==3.4.2
+click==8.1.8
+commonmark==0.9.1
+contourpy==1.3.1
+cryptography==46.0.3
+cycler==0.12.1
+distro==1.9.0
 dnspython==2.8.0
+docopt==0.6.2
+docutils==0.21.2
 dotenv==0.9.9
 ecdsa==0.19.1
-email-validator==2.3.0
+email_validator==2.1.2
 exceptiongroup==1.3.0
-fastapi==0.116.1
-fastapi-users==15.0.1
+fastapi==0.116.2
+fastapi-users==12.1.3
 fastapi-users-db-sqlalchemy==7.0.0
-Flask==3.1.2
+fonttools==4.56.0
 gql==4.0.0
 graphql-core==3.2.6
 greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
+httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+imagesize==1.4.1
 iniconfig==2.3.0
-itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.9.0
+kiwisolver==1.4.8
+lxml==5.4.0
 makefun==1.16.0
 MarkupSafe==3.0.3
+matplotlib==3.10.0
 multidict==6.6.4
 mysql==0.0.3
 mysql-connector-python==9.4.0
-package_name==0.1
-packaging==25.0
+mysqlclient==2.2.7
+numpy==2.2.3
+openai==1.77.0
+packaging==24.2
+pandas==2.2.3
 passlib==1.7.4
-playwright==1.55.0
+pillow==11.1.0
+pipreqs==0.4.13
 pluggy==1.6.0
 propcache==0.3.2
-psycopg2-binary==2.9.10
-pwdlib==0.2.1
 pyasn1==0.6.1
 pycparser==2.23
 pydantic==2.11.9
 pydantic_core==2.33.2
-pyee==13.0.0
-PyJWT==2.10.1
+Pygments==2.19.2
+PyJWT==2.8.0
 PyMySQL==1.1.2
+pyparsing==3.2.1
 pytest==7.4.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
-python-jose==3.5.0
-python-multipart==0.0.20
-redis==7.0.1
-requests==2.32.5
+python-jose==3.3.0
+python-multipart==0.0.7
+pytz==2025.1
+PyYAML==6.0.2
+recommonmark==0.7.1
+requests==2.32.3
+roman-numerals-py==3.1.0
 rsa==4.9.1
-setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
+snowballstemmer==3.0.1
+soupsieve==2.7
+Sphinx==8.2.3
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 SQLAlchemy==2.0.43
-starlette==0.47.3
+starlette==0.48.0
+tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
-urllib3==2.5.0
+tzdata==2025.1
+urllib3==2.4.0
 uvicorn==0.35.0
-Werkzeug==3.1.3
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
+yarg==0.1.10
 yarl==1.20.1
