--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@mantine/core": "^8.3.2",
-    "@mantine/hooks": "^8.3.2",
+    "@mantine/core": "^8.3.10",
+    "@mantine/hooks": "^8.3.10",
+    "@mantine/notifications": "^8.3.10",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.5",
     "lucide-react": "^0.545.0",
     "next": "15.5.3",
